--- a/Filmes-TMDB/app.json
+++ b/Filmes-TMDB/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.petersonoenning.FilmesTMDB"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "99dc0e00-5ad6-440b-b724-78cdda4ef4fa"
+      }
     }
   }
 }
